test/libsolidity/syntaxTests/constants/constant_with_visibility.sol
uint public constant x = 7;
// ----
// ParserError 2314: (5-11): Expected identifier but got 'public'
